types de questions boutons pour le player

--- a/MMSongQuizz/app/src/main/res/layout/activity_question.xml
+++ b/MMSongQuizz/app/src/main/res/layout/activity_question.xml
@@ -22,9 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/questionResponseInput"
+        android:layout_marginTop="114dp"
         android:layout_below="@+id/questionTextView"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="91dp" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -42,4 +42,29 @@
         android:id="@+id/questionMessageText"
         android:layout_below="@+id/questionSubmitBtn"
         android:layout_alignParentStart="true" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/questionTextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="41dp"
+        android:id="@+id/player_layout">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Play"
+            android:id="@+id/player_play_btn" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pause"
+            android:id="@+id/player_pause_btn" />
+    </LinearLayout>
 </RelativeLayout>
