--- a/MMSongQuizz/app/src/main/res/layout/activity_main.xml
+++ b/MMSongQuizz/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,14 @@
         android:layout_below="@+id/textView3"
         android:layout_toEndOf="@+id/textView2"
         android:layout_marginTop="100dp" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="préférences genre"
+        android:id="@+id/main_genre_pref"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
