--- a/MMSongQuizz/app/src/main/res/layout/activity_genre.xml
+++ b/MMSongQuizz/app/src/main/res/layout/activity_genre.xml
@@ -21,7 +21,7 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:id="@+id/genre_list"
         android:layout_below="@+id/genre_home_btn"
         android:layout_alignParentLeft="true"
