--- a/MMSongQuizz/app/src/main/res/layout/activity_question.xml
+++ b/MMSongQuizz/app/src/main/res/layout/activity_question.xml
@@ -23,18 +23,20 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Question.."
         android:id="@+id/questionTextView"
+        android:layout_below="@+id/compteurQuestionLayout"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="36dp" />
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/questionResponseInput"
-        android:layout_marginTop="10dp"
         android:layout_below="@+id/dynamicLayout"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:height="30dp"
+        android:textSize="20dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -44,6 +46,84 @@
         android:layout_below="@+id/questionResponseInput"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/questionSubmitBtn"
+        android:id="@+id/lettreLayout">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ligne1"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <Button
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" "
+                    android:id="@+id/button1"
+                    android:textAlignment="center" />
+
+                <Button
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" "
+                    android:id="@+id/button2"
+                    android:textAlignment="center" />
+
+                <Button
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" "
+                    android:id="@+id/button3"
+                    android:textAlignment="center" />
+
+                <Button
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" "
+                    android:id="@+id/button4"
+                    android:textAlignment="center" />
+
+                <Button
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" "
+                    android:id="@+id/button5"
+                    android:textAlignment="center" />
+
+                <Button
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" "
+                    android:id="@+id/button6"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/ligne2"></LinearLayout>
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -68,7 +148,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/dynamicLayout"
-        android:layout_below="@+id/compteurQuestionLayout">
+        android:layout_below="@+id/questionTextView">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -77,7 +157,7 @@
             android:layout_below="@+id/questionTextView"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="41dp"
+            android:layout_marginTop="10dp"
             android:id="@+id/player_layout"
             android:weightSum="1"
             android:background="#00ffffff">
@@ -109,7 +189,7 @@
             <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/ImageWebview"
                 android:layout_width="fill_parent"
-                android:layout_height="134dp"
+                android:layout_height="192dp"
                 android:layout_gravity="center" />
 
         </FrameLayout>
