--- a/MMSongQuizz/app/src/main/res/layout/activity_create_user.xml
+++ b/MMSongQuizz/app/src/main/res/layout/activity_create_user.xml
@@ -20,9 +20,16 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Créer un compte"
-            android:id="@+id/createuser_title" />
+            android:id="@+id/createuser_title"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimary"
+            android:layout_marginBottom="10dp" />
 
         <EditText
             android:id="@+id/createuser_login"
