--- a/MMSongQuizz/app/src/main/res/layout/activity_main.xml
+++ b/MMSongQuizz/app/src/main/res/layout/activity_main.xml
@@ -20,20 +20,23 @@
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:weightSum="1">
 
             <FrameLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.67">
 
-                <ImageView
-                    android:layout_width="115dp"
-                    android:layout_height="95dp"
-                    android:id="@+id/imageView2"
-                    android:layout_gravity="left|center_horizontal"
-                    android:src="@mipmap/mmsongquizzlogo" />
+                <Button
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Déconnexion"
+                    android:id="@+id/main_logoutBtn"
+                    android:layout_gravity="right|top" />
 
                 <Button
                     style="?android:attr/buttonStyleSmall"
@@ -44,7 +47,14 @@
                     android:layout_centerVertical="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_gravity="right" />
+                    android:layout_gravity="right|bottom" />
+
+                <ImageView
+                    android:layout_width="132dp"
+                    android:layout_height="109dp"
+                    android:id="@+id/imageView2"
+                    android:layout_gravity="left|top"
+                    android:src="@mipmap/mmsongquizzlogo" />
             </FrameLayout>
 
             <TextView
