--- a/MMSongQuizz/app/src/main/res/layout/activity_endsession.xml
+++ b/MMSongQuizz/app/src/main/res/layout/activity_endsession.xml
@@ -24,6 +24,28 @@
         android:layout_weight="0.11"
         android:textSize="20dp" />
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.03">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Vous avez gagné "
+            android:id="@+id/textView8" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0 points"
+            android:id="@+id/endsession_nbpointsearnedLabel"
+            android:textStyle="bold" />
+    </LinearLayout>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
