--- a/MMSongQuizz/app/src/main/res/layout/activity_genre.xml
+++ b/MMSongQuizz/app/src/main/res/layout/activity_genre.xml
@@ -25,18 +25,7 @@
 
             <Button
                 style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Accueil"
-                android:id="@+id/genre_home_btn"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_gravity="left" />
-
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Valider"
                 android:id="@+id/genre_submit"
